# debate-arena

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  tests.yml
examples/: blog_post.py  run_python_api.py  web_ui.py
personas/: customer.yaml  engineer.yaml  first-principles.yaml  hacker.yaml  moderator.yaml  optimist.yaml  philosopher.yaml  presets.json  regulator.yaml  skeptic.yaml  strategist.yaml  trader.yaml
src/debate_arena/: __init__.py  arena.py  cli.py  config.py  models.py  personas.py  presets.py  shares.py  viewer.py
src/debate_arena/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py  openrouter.py  stub.py
tests/: test_arena.py  test_config.py  test_models.py  test_new_personas.py  test_ollama_provider.py  test_personas.py  test_presets.py  test_presets_ui.py  test_providers.py  test_shares.py  test_stub_provider.py  test_viewer.py  test_web_ui.py
